修改接口之后需要修改的页面，主页轮播图

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 <script type="text/javascript" src="js/libs/swiper-3.4.1.min.js"></script>
 <script type="text/javascript" src="js/libs/jquery.qqFace.js"></script>
 <script type="text/javascript" src="js/libs/angular.min.js"></script>
+<script type="text/javascript" src="//cdn.bootcss.com/angular-ui-bootstrap/2.5.0/ui-bootstrap.min.js"></script>
+<script type="text/javascript" src="//cdn.bootcss.com/angular-ui-bootstrap/2.5.0/ui-bootstrap-tpls.min.js"></script>
 <script type="text/javascript" src="js/libs/angular-ui-router.js"></script>
 <script type="text/javascript" src="js/libs/angular-sanitize.min.js"></script>
 <script src="http://localhost:8088/bundle.js"></script>
