--- a/index.html
+++ b/index.html
@@ -17,14 +17,17 @@
 <footer ng-include="'template/footer.html'" ng-if="showIndex"></footer>
 <div ui-view="login"></div>
 <script type="text/javascript" src="js/libs/jquery-1.9.1.js"></script>
-<script type="text/javascript" src="js/libs/jquery.mCustomScrollbar.concat.min.js"></script>
+<!--<script type="text/javascript" src="js/libs/jquery.mCustomScrollbar.concat.min.js"></script>-->
+<script type="text/javascript" src="js/libs/unslider-min.js"></script>
 <script type="text/javascript" src="js/libs/layer/layer.js"></script>
 <script type="text/javascript" src="js/libs/laypage.js"></script>
 <script type="text/javascript" src="js/libs/swiper-3.4.1.min.js"></script>
 <script type="text/javascript" src="js/libs/jquery.qqFace.js"></script>
 <script type="text/javascript" src="js/libs/angular.min.js"></script>
-<script type="text/javascript" src="//cdn.bootcss.com/angular-ui-bootstrap/2.5.0/ui-bootstrap.min.js"></script>
-<script type="text/javascript" src="//cdn.bootcss.com/angular-ui-bootstrap/2.5.0/ui-bootstrap-tpls.min.js"></script>
+<!--<script type="text/javascript" src="//cdn.bootcss.com/angular-ui-bootstrap/0.1.0/ui-bootstrap.min.js"></script>-->
+<!--<script type="text/javascript" src="//cdn.bootcss.com/angular-ui-bootstrap/0.1.0/ui-bootstrap-tpls.min.js"></script>-->
+<!--<script type="text/javascript" src="js/libs/smooth-scrollbar.js"></script>-->
+<!--<script type="text/javascript" src="js/libs/angular-smooth-scrollbar.js"></script>-->
 <script type="text/javascript" src="js/libs/angular-ui-router.js"></script>
 <script type="text/javascript" src="js/libs/angular-sanitize.min.js"></script>
 <script src="http://localhost:8088/bundle.js"></script>
