修改所有图片尺寸

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="favicon.ico">
+    <link rel="stylesheet" href="css/video-js.min.css">
 </head>
 <body ng-controller="ParentControl">
 <div ng-class="{wrapper:showIndex}">
@@ -23,6 +24,7 @@
 <script type="text/javascript" src="js/libs/laypage.js"></script>
 <script type="text/javascript" src="js/libs/swiper-3.4.1.min.js"></script>
 <script type="text/javascript" src="js/libs/jquery.qqFace.js"></script>
+<script type="text/javascript" src="js/libs/video.min.js"></script>
 <script type="text/javascript" src="js/libs/angular.min.js"></script>
 <!--<script type="text/javascript" src="//cdn.bootcss.com/angular-ui-bootstrap/0.1.0/ui-bootstrap.min.js"></script>-->
 <!--<script type="text/javascript" src="//cdn.bootcss.com/angular-ui-bootstrap/0.1.0/ui-bootstrap-tpls.min.js"></script>-->
