--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" ng-app="myApp">
 <head>
     <meta charset="UTF-8">
-    <title>文博山东</title>
+    <title>文物山东</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="favicon.ico">
@@ -12,7 +12,6 @@
 <div ng-class="{wrapper:showIndex}">
     <header ng-include="'template/header.html'" ng-if="showIndex"></header>
     <div ui-view>
-
     </div>
 </div>
 <footer ng-include="'template/footer.html'" ng-if="showIndex"></footer>
