策展二级评论

--- a/directive/firstcomment.html
+++ b/directive/firstcomment.html
@@ -8,6 +8,11 @@
     </div>
     <div class="ablum-details-comment-first-content">
         <p ng-bind-html="content|filterQQface"></p>
-        <a href="">回复</a><a href="">·展开回复</a>
+        <a href="">回复</a><a ng-click="showOthersComment($event)">*展开回复∨</a>
     </div>
+    <div class="ablum-details-comment-others-status">
+        <otherscomments imgurl="img/user_head.png" username="今夕无痕" time="刚刚" content="[em_4][em_7]宋朝瓷器文物展示2016年在吉林出土的一批文物，再现了宋朝瓷器制作技艺的精髓宋朝瓷器文物展宋朝瓷器文物展示2016年在吉林出土的一批文物，再现了宋朝瓷器制作技艺的精髓宋朝瓷器文物展宋朝瓷器文物展示"></otherscomments>
+        <otherscomments imgurl="img/user_head.png" username="今夕无痕" time="刚刚" content="[em_4][em_7]宋朝瓷器文物展示2016年在吉林出土的一批文物，再现了宋朝瓷器制作技艺的精髓宋朝瓷器文物展宋朝瓷器文物展示2016年在吉林出土的一批文物，再现了宋朝瓷器制作技艺的精髓宋朝瓷器文物展宋朝瓷器文物展示"></otherscomments>
+    </div>
+
 </div>
