--- a/directive/othercomment.html
+++ b/directive/othercomment.html
@@ -1,3 +1,13 @@
 <div class="ablum-details-comment-others">
-
+    <div class="ablum-details-comment-others-top">
+        <img ng-src="{{imgurl}}" style='border-radius:50%' alt="" >
+        <span>
+            <u ng-bind="username"></u>
+            <i ng-bind="time"></i>
+        </span>
+    </div>
+    <div class="ablum-details-comment-others-content">
+        <p ng-bind-html="content|filterQQface"></p>
+        <a href="">回复</a>
+    </div>
 </div>
