--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>文物山东</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="renderer" content='webkit'/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="favicon.ico">
     <link rel="stylesheet" href="css/video-js.min.css">
@@ -32,7 +33,7 @@
 <script type="text/javascript" src="js/libs/angular-ui-router.js"></script>
 <script type="text/javascript" src="js/libs/angular-sanitize.min.js"></script>
 <script type="text/javascript" src="js/libs/angular-cookies.min.js"></script>
-<script src="http://localhost:8088/bundle.js"></script>
-<!--<script src="js/bundle.js"></script>-->
+<!--<script src="http://localhost:8088/bundle.js"></script>-->
+<script src="js/bundle.js"></script>
 </body>
 </html>
