--- a/index.html
+++ b/index.html
@@ -31,9 +31,10 @@
 <!--<script type="text/javascript" src="js/libs/smooth-scrollbar.js"></script>-->
 <!--<script type="text/javascript" src="js/libs/angular-smooth-scrollbar.js"></script>-->
 <script type="text/javascript" src="js/libs/angular-ui-router.js"></script>
+<script type="text/javascript" src="js/libs/angular-animate.js"></script>
 <script type="text/javascript" src="js/libs/angular-sanitize.min.js"></script>
 <script type="text/javascript" src="js/libs/angular-cookies.min.js"></script>
-<!--<script src="http://localhost:8088/bundle.js"></script>-->
-<script src="js/bundle.js"></script>
+<script src="http://localhost:8088/bundle.js"></script>
+<!--<script src="js/bundle.js"></script>-->
 </body>
 </html>
