--- a/index.html
+++ b/index.html
@@ -3,11 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <title>文物山东</title>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="renderer" content='webkit'/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="favicon.ico">
     <link rel="stylesheet" href="css/video-js.min.css">
+    <script type="text/javascript">
+//        var commonURL = 'http://www.jsdaima.com/';
+        function mobile_device_detect(url){
+            var thisOS=navigator.platform;
+            var os=new Array("iPhone","iPod","iPad","android","Nokia","SymbianOS","Symbian","Windows Phone","Phone","Linux armv71","MAUI","UNTRUSTED/1.0","Windows CE","BlackBerry","IEMobile");
+            for(var i=0;i<os.length;i++){
+                if(thisOS.match(os[i])){
+                    window.location=url;
+                }
+            }
+            if(navigator.platform.indexOf('iPad') != -1){
+                window.location=url;
+            }
+            var check = navigator.appVersion;
+            if( check.match(/linux/i) ){
+                if(check.match(/mobile/i) || check.match(/X11/i)) {
+                    window.location=url;
+                }
+            }
+            Array.prototype.in_array = function(e){
+                for(i=0;i<this.length;i++){
+                    if(this[i] == e)
+                        return true;
+                }
+                return false;
+            }
+        }
+        mobile_device_detect("../front/index.html");/*指定跳转地址*/
+    </script>
 </head>
 <body ng-controller="ParentControl">
 <div ng-class="{wrapper:showIndex}">
@@ -28,7 +57,7 @@
 <script type="text/javascript" src="js/libs/angular-animate.js"></script>
 <script type="text/javascript" src="js/libs/angular-sanitize.min.js"></script>
 <script type="text/javascript" src="js/libs/angular-cookies.min.js"></script>
-<script src="http://localhost:8088/bundle.js"></script>
-<!--<script src="js/bundle.js"></script>-->
+<!--<script src="http://localhost:8088/bundle.js"></script>-->
+<script src="js/bundle.js"></script>
 </body>
 </html>
